# forge-tig-configuration

./: .flake8  .pylintrc  CHANGELOG.md  README.md  example_config.xlsx  pyproject.toml  schema.json  test_configs.py  unprocessed-files.txt
Jenkins/: Jenkinsfile
archive/: AMSR2-REMSS-L2P-v7.2.cfg  AMSRE-REMSS-L2P-v7a.cfg  COWVR_STPH8_L1_TSDR_V10.0.cfg  CYGNSS_L1_CDR_V1.1.cfg  MERGED_TP_J1_OSTM_OST_CYCLES_V42.cfg  QSCAT_LEVEL_2B_OWV_COMP_12.cfg  QSCAT_LEVEL_2B_OWV_COMP_12_LCR_3.1.cfg  RSCAT_LEVEL_2B_OWV_CLIM_12_V1.cfg  RSCAT_LEVEL_2B_OWV_COMP_12_V1.1.cfg  SWOT_L2_HR_Raster_100m_1.0.cfg  SWOT_L2_HR_Raster_100m_1.1.cfg  SWOT_L2_HR_Raster_100m_2.0.cfg  SWOT_L2_HR_Raster_250m_1.1.cfg  SWOT_L2_HR_Raster_250m_2.0.cfg  SWOT_L2_LR_SSH_BASIC_1.0.cfg  SWOT_L2_LR_SSH_BASIC_1.1.cfg  SWOT_L2_LR_SSH_EXPERT_1.1.cfg  SWOT_L2_LR_SSH_WINDWAVE_1.0.cfg  SWOT_L2_LR_SSH_WINDWAVE_1.1.cfg  SWOT_L2_NALT_IGDR_1.0.cfg  SWOT_L2_NALT_IGDR_SSHA_1.0.cfg  SWOT_L2_NALT_OGDR_SSHA_1.0.cfg  SWOT_SIMULATED_L2_KARIN_SSH_ECCO_LLC4320_CALVAL_V1.cfg  SWOT_SIMULATED_L2_KARIN_SSH_ECCO_LLC4320_SCIENCE_V1.cfg  SWOT_SIMULATED_L2_KARIN_SSH_GLORYS_SCIENCE_V1.cfg  SWOT_SIMULATED_L2_NADIR_SSH_ECCO_LLC4320_CALVAL_V1.cfg  SWOT_SIMULATED_L2_NADIR_SSH_ECCO_LLC4320_SCIENCE_V1.cfg  SWOT_SIMULATED_L2_NADIR_SSH_GLORYS_CALVAL_V1.cfg  VIIRS_N20-OSPO-L2P-v2.61.cfg  VIIRS_NPP-OSPO-L2P-v2.41.cfg
config-files/: ALTIKA_SARAL_L2_OST_XOGDR.cfg  AMSR2-REMSS-L2P-v8.2.cfg  AMSR2-REMSS-L2P-v8a.cfg  AMSR2-REMSS-L2P_RT-v8.2.cfg  AMSR2-REMSS-L2P_RT_v8a.cfg  AQUARIUS_L2_SSS_CAP_V5.cfg  AQUARIUS_L2_SSS_V4.cfg  AQUARIUS_L2_SSS_V5.cfg  ASCATA-L2-25km.cfg  ASCATA-L2-Coastal.cfg  ASCATA_ESDR_ANCILLARY_L2_V1.1.cfg  ASCATA_ESDR_L2_WIND_STRESS_V1.1.cfg  ASCATA_ESDR_L2_WSDERIV_V1.0.cfg  ASCATB-L2-25km.cfg  ASCATB-L2-Coastal.cfg  ASCATB_ESDR_ANCILLARY_L2_V1.1.cfg  ASCATB_ESDR_L2_WIND_STRESS_V1.1.cfg  ASCATB_ESDR_L2_WSDERIV_V1.0.cfg  ASCATC-L2-25km.cfg  ASCATC-L2-Coastal.cfg  AVHRR19_G-NAVO-L2P-v1.0.cfg  AVHRRF_MA-STAR-L2P-v2.80.cfg  AVHRRF_MB-STAR-L2P-v2.80.cfg  AVHRRF_MC-STAR-L2P-v2.80.cfg  AVHRRMTA_G-NAVO-L2P-v1.0.cfg  AVHRRMTA_G-NAVO-L2P-v2.0.cfg  AVHRRMTB_G-NAVO-L2P-v1.0.cfg  AVHRRMTB_G-NAVO-L2P-v2.0.cfg  AVHRRMTC_G-NAVO-L2P-v2.0.cfg  AVHRR_SST_METOP_B-OSISAF-L2P-v1.0.cfg  COWVR_STPH8_L1_TSDR_V10.0.cfg  (+137 more)
(+189 files in other folders)
